fix spacing and link paths

--- a/burgerpeg/styles/desktop_style.css
+++ b/burgerpeg/styles/desktop_style.css
@@ -105,8 +105,9 @@ h1 {
 }
 
 #parallax1 {
-  background-image: url(/images/burger1.jpg);
-  background-position: right 0px !important;
+  background: url("/images/burger1.jpg");
+  background-position: center;
+  background-size: cover;
 }
 
 .heading {
@@ -217,8 +218,8 @@ div.three-col {
   font-family: "Concert One";
   font-size: 50px;
   text-align: center;
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
 
 #food .col-left .menu {
@@ -269,8 +270,8 @@ div.three-col {
   font-family: "Concert One";
   font-size: 50px;
   text-align: center;
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
 
 #drinks .col-right .menu {
